--- a/CadenaMercado/src/main/java/Vista/VistaOneInput.form
+++ b/CadenaMercado/src/main/java/Vista/VistaOneInput.form
@@ -31,9 +31,9 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="txtFld_codigoBarras" alignment="0" max="32767" attributes="0"/>
+                  <Component id="txtFld_primero" alignment="0" max="32767" attributes="0"/>
                   <Component id="bttn_aceptar" alignment="0" pref="200" max="32767" attributes="0"/>
-                  <Component id="lbl_codigoBarras" max="32767" attributes="0"/>
+                  <Component id="lbl_primero" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="30" max="32767" attributes="0"/>
           </Group>
@@ -43,9 +43,9 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="10" max="32767" attributes="0"/>
-              <Component id="lbl_codigoBarras" min="-2" max="-2" attributes="0"/>
+              <Component id="lbl_primero" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-              <Component id="txtFld_codigoBarras" min="-2" max="-2" attributes="0"/>
+              <Component id="txtFld_primero" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="bttn_aceptar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
@@ -66,13 +66,13 @@
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JLabel" name="lbl_codigoBarras">
+    <Component class="javax.swing.JLabel" name="lbl_primero">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="text" type="java.lang.String" value="C&#xf3;digo de Barras"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtFld_codigoBarras">
+    <Component class="javax.swing.JTextField" name="txtFld_primero">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[73, 30]"/>
