--- a/CadenaMercado/src/main/java/Vista/VistaOneInput.form
+++ b/CadenaMercado/src/main/java/Vista/VistaOneInput.form
@@ -78,6 +78,9 @@
           <Dimension value="[73, 30]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
