--- a/CadenaMercado/src/main/java/Vista/VistaThreeInput.form
+++ b/CadenaMercado/src/main/java/Vista/VistaThreeInput.form
@@ -90,6 +90,9 @@
           <Dimension value="[73, 30]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="lbl_apellido">
       <Properties>
@@ -102,6 +105,9 @@
           <Dimension value="[73, 30]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="lbl_dni">
       <Properties>
@@ -114,6 +120,9 @@
           <Dimension value="[73, 30]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
