--- a/CadenaMercado/src/main/java/Vista/VistaTwoInput.form
+++ b/CadenaMercado/src/main/java/Vista/VistaTwoInput.form
@@ -84,6 +84,9 @@
           <Dimension value="[73, 30]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="lbl_segundo">
       <Properties>
@@ -96,6 +99,9 @@
           <Dimension value="[73, 30]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
